# Principles-of-Robot-Science-Course

./: README.md
HW_00/p1/: package.xml  setup.py
HW_00/p1/p1/: main.py
HW_01/: HW1-FUM-Robotics-Winter2023-Answer.odt
HW_01/alicesim/: setup.py
HW_02/my_interface/: CMakeLists.txt  package.xml
HW_02/my_interface/srv/: Message.srv
HW_02/yangsim/: CMakeLists.txt  package.xml
HW_02/yangsim/src/: main.cpp
HW_02/yinsim/: package.xml  setup.py
HW_02/yinsim/yinsim/: main.py
HW_03/: HW3-FUM-Robotics-Winter2023-Answer.docx
HW_04/alicesim/: package.xml
HW_04/alicesim/alicesim/: main.py
HW_04/alicesim/launch/: alice_launch.yaml
HW_04/bobsim/: CMakeLists.txt  package.xml
HW_04/bobsim/launch/: bob_launch.yaml
HW_04/bobsim/src/: main.cpp
HW_04/yangsim/: package.xml  setup.cfg  setup.py
HW_04/yangsim/yangsim/: main.py
HW_04/yinsim/: CMakeLists.txt  package.xml
HW_05/camera_rgb/: package.xml  setup.cfg  setup.py
Lab_02/turtlesim_controller/: package.xml  setup.py
Lab_04/learning_tf2_py/: package.xml  setup.py
Lab_05/lab5_q3/: CMakeLists.txt  package.xml
Lab_05/lab5_q3/lab5_urdf_generated_package/: package.xml
Lab_05/lab5_q3/lab5_urdf_generated_package/config/: model.urdf.xacro
Lab_05/lab5_q3/lab5_urdf_generated_package/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
Lab_05/lab5_q3/lab5_urdf_generated_package/urdf/: model.urdf.xacro
Lab_05/lab5_q3/launch/: lab5_q3_launch.launch.py
Lab_05/lab5_q3/src/: main.cpp
Lab_05/lab5_urdf_generated_package/: .setup_assistant  CMakeLists.txt
Lab_05/lab5_urdf_package/: package.xml  setup.cfg  setup.py
Lab_07/: Q02.webm  Q03.webm  info.txt
Lab_08/: Q02.webm  Q03.webm
Lab_08/Q03/: package.xml  setup.cfg  setup.py
Lab_09/: Q03.webm
Lab_09/lab9_2/: package.xml  setup.cfg  setup.py
Lab_10/: create_base.urdf.xacro  ultrasonic_sensor.urdf.xacro
Project_Phase_0/: Screencast from 06-14-2023 11:20:19 AM.webm  maze_tight.pgm
(+34 files in other folders)
